--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,7 @@ footer {
   padding: 20px 0;
 }
 
-.container {
+.containerbt {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
