--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,6 +75,7 @@ button {
   color: var(--text-color);
   text-align: center;
   padding-top: 0px;
+  margin: 0px;
   padding-bottom: 0px;
   width: 100%;
   background-color: var(--main-bg-color);
