--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,9 +67,9 @@ button {
 }
   
   /* layout */
-.container {
+/* .container {
   display: flex;
-}
+} */
   
 .top {
   font-family: "NotoSans_extrabold";
