--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,10 +76,9 @@ button {
   font-size: 150px;
   color: var(--top-text-color);
   text-align: center;
-  padding-top: 0px;
+  padding: 0px;
   margin: 0px;
   border: 0px;
-  padding-bottom: 0px;
   width: 100%;
   background-color: var(--main-top-bg-color);
 }
