--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,6 @@
   --list-complete-bg-color: #4CAF50;
 }
   
-  /* button */
 button {
   background-color: var(--button-bg-color);
   border: none;
@@ -40,7 +39,16 @@ button {
   border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
 }
-  
+
+html {
+  margin: 0px;
+  border: 0px;
+}
+
+p {
+  margin: 0px;
+}
+
 .my-button {
   background-color: var(--button-bg-color);
   border: none;
@@ -76,7 +84,8 @@ button {
   font-size: 150px;
   color: var(--top-text-color);
   text-align: center;
-  padding: 0px;
+  padding-top: 10%;
+  padding-bottom: 10%;
   margin: 0px;
   border: 0px;
   width: 100%;
