--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,8 @@
 /* font-face */
+* {
+  margin: 0;
+  padding: 0;
+}
 @font-face {
   font-family: "DNFfont";
   src: url("../assets/DNFBitBitTTF_Font.ttf");
@@ -8,119 +12,55 @@
 
   font-family: "NotoSans_extrabold";
   src: url("../assets/static/NotoSansKR-ExtraBold.ttf");
-  }
-  
-  /* colors */
-  :root {
+}
+#icon {
+  display: inline-block;
+  margin-inline: 5% 10%;
+  writing-mode: horizontal-tb;
+  width: 80px;
+  height: 80px;
+}
+/* colors */
+:root {
   --main-top-bg-color: #5c5c5c;
   --main-bottom-bg-color: #ababab;
-  --side-bg-color: #F5F5F5;
+  --main-footer-bg-color: #ffffff;
   --top-text-color: #ffffff;
   --bottom-text-color: #000000;
-  --button-bg-color: #4CAF50;
-  --button-hover-bg-color: #3e8e41;
-  --button-active-bg-color: #367d39;
-  --list-hover-bg-color: #f1f1f1;
-  --list-incomplete-bg-color: #bbb;
-  --list-complete-bg-color: #4CAF50;
+  --footer-text-color: #000000;
+
 }
-  
-button {
-  background-color: var(--button-bg-color);
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 10px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s, color 0.3s;
+/* parts */
+body {
+  width: 100%;
 }
 
-html {
-  margin: 0px;
-  border: 0px;
-}
-
-p {
-  margin: 0px;
-}
-
-.my-button {
-  background-color: var(--button-bg-color);
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 10px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s, color 0.3s;
-}
-  
-.my-button:hover {
-  background-color: var(--button-hover-bg-color);
-  color: white;
-}
-  
-.my-button:active {
-  background-color: var(--button-active-bg-color);
-  color: white;
-}
-  
-  /* layout */
-/* .container {
-  display: flex;
-} */
-  
 .top {
   font-family: "NotoSans_extrabold";
   font-size: 150px;
   color: var(--top-text-color);
   text-align: center;
   padding-top: 10%;
-  padding-bottom: 10%;
-  margin: 0px;
+  padding-bottom: 15%;
   border: 0px;
-  width: 100%;
   background-color: var(--main-top-bg-color);
 }
-  
-.bottom {
-  font-family: "NotoSans_extrabold";
-  font-size: 150px;
-  color: var(--bottom-text-color);
+
+.ul_icon {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  gap: 10px;
+}
+.li_icon{
+  flex: 1 1 auto;
   text-align: center;
-  padding-top: 0px;
-  margin: 0px;
-  padding-bottom: 0px;
-  width: 100%;
+  
+}
+
+.bottom {
   background-color: var(--main-bottom-bg-color);
-}
-
-label[for="check-btn"] {
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-}
-
-.menu-label {
-  cursor: pointer;
-}
-
-.menu-item {
-  display: none;
-}
-
-#check-btn:checked ~ .menu-list .menu-item {
-  display: block;
+  padding: 50px 0;
 }
 
 footer {
@@ -128,37 +68,10 @@ footer {
   padding: 20px 0;
 }
 
-.containerbt {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.left-halfbt {
-  text-align: left;
-}
-
-.right-halfbt {
-  text-align: right;
-}
-
-.social-list {
-  list-style: none;
-  display: inline-block;
-  padding: 0;
-}
-
-.social-list li {
-  display: inline-block;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.social-list a {
-  color: #222;
-}
-
-.social-list i {
+.Copyright_text {
+  text-align: center;
+  font-family: "NotoSans_medium";
   font-size: 20px;
+  margin: 20px;
+  padding: 20px 0;
 }
