--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,7 +34,7 @@
 body {
   width: 100%;
   margin: 0;
-  
+
 }
 
 .top {
@@ -62,7 +62,7 @@ body {
 
 .bottom {
   background-color: var(--main-bottom-bg-color);
-  padding: 50px 0;
+  /* padding: 50px 0; */
 }
 
 footer {
