--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,10 +2,10 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
-  user-select:none
+  -webkit-user-select: none !important; 
+  -moz-user-select: -moz-none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
 }
 @font-face {
   font-family: "DNFfont";
