--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@
   font-family: "NotoSans_regular";
   src: url("../assets/static/NotoSansKR-Regular.ttf");
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -41,7 +42,7 @@
 }
 
 #icon-text{
-  font-family: "NotoSans_regularw";
+  font-family: "NotoSans_regular";
   font-size: 25px;
 }
 
